# aulas-ADA

./: README.md  pyproject.toml
aulas/: [Aulas 01 e 02] Funções e Tuplas.ipynb
